Change-Id: Idfaf2002a8917217980994ddda73132b61fb5baf

--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,11 @@
         "zf2"
     ],
     "homepage": "http://framework.zend.com/",
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "http://packages.zendframework.com/"
-        }
-    ],
+    
     "require": {
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.*",
         "zendframework/zendservice-recaptcha": "2.*",
-        "doctrine/common": ">=2.1"
+		"doctrine/orm": "*"     
     }
 }
